Fixed spacing in login and create account. Also fixed search field and button in daily.html and unlimited.html

--- a/html_css_content/global.css
+++ b/html_css_content/global.css
@@ -42,7 +42,9 @@ main {
   margin: 0;
 }
 
-
+.input-group.mb-3 {
+    width: 40%;
+}
 
 /* Top Menu Bar section */
 .curr_page{
